--- a/frontend/src/app/components/project-content/project-content.component.scss
+++ b/frontend/src/app/components/project-content/project-content.component.scss
@@ -2,57 +2,47 @@
   color: var(--black);
   background-color: var(--white);
 
-  .card-content-container {
-    padding: 250px 40px 0 75px;
 
-    .container-slider {
-      padding-right: 30px;
-    }
+  .container-slider {
+    padding-right: 30px;
+  }
 
-    .mb-70 {
-      margin-bottom: 70px;
-    }
+  .mb-70 {
+    margin-bottom: 70px;
+  }
 
-    .mb-80 {
-      margin-bottom: 80px;
-    }
+  .mb-80 {
+    margin-bottom: 80px;
+  }
 
-    .w-94 {
-      width: 94%;
-    }
+  .w-94 {
+    width: 94%;
+  }
 
-    .w-70 {
-      width: 70%;
-    }
+  .w-70 {
+    width: 70%;
+  }
 
-    .ml5 {
-      margin-left: -5%;
-    }
+  .service {
+    font-size: 44px;
+    font-weight: 400;
+    line-height: 54px;
+    letter-spacing: 0.5px;
+    color: var(--black);
+    padding: 25px 80px;
+    border-radius: 160px;
+    background-color: var(--gray);
+  }
 
-    .ml7 {
-      margin-left: -7%;
-    }
+  .mb-400 {
+    margin-bottom: 400px;
+  }
 
-    .service {
-      font-size: 44px;
-      font-weight: 400;
-      line-height: 54px;
-      letter-spacing: 0.5px;
-      color: var(--black);
-      padding: 25px 80px;
-      border-radius: 160px;
-      background-color: var(--gray);
-    }
-
-    .mb-400 {
-      margin-bottom: 400px;
-    }
-
-    .mb-300 {
-      margin-bottom: 300px;
-    }
+  .mb-300 {
+    margin-bottom: 300px;
   }
 }
+
 
 @media (max-width: 999px) {
   .card-content {
@@ -116,7 +106,7 @@
   }
 }
 
-@media (min-width: 1000px) and (max-width: 1450px) {
+@media (min-width: 1000px) and (max-width: 1350px) {
   .card-content {
 
     .card-content-container {
@@ -170,55 +160,191 @@
   }
 }
 
-@media (min-width: 1451px) and (max-width: 2000px) {
+@media (min-width: 1351px) and (max-width: 1900px) {
   .card-content {
 
-    .card-content-container {
-      padding: 380px 0 0 75px;
-      width: calc(100% - 75px);
+    .title-comp {
+      padding: 279px 0 34.5px;
+    }
 
-      .mb-70 {
-        margin-bottom: 0;
-      }
+    .service {
+      font-weight: 400;
+      font-size: 22px;
+      line-height: 27px;
+      letter-spacing: 0.5px;
+      text-align: center;
+      padding: 20px 40px;
+      width: 176px;
+      border-radius: 80px;
+    }
 
-      .text-gray, .text-black {
-        font-size: 34px;
-        line-height: 45px;
-      }
+    .text-gray, .text-black {
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 22.5px;
+    }
 
-      .w-95 {
-        width: 95%;
-      }
+    .gap-10 {
+      gap: 5px;
+    }
 
-      .w-80 {
-        width: 85%;
-      }
+    .mb-50 {
+      margin-bottom: 23px;
+    }
 
-      .ml5 {
-        width: 105%;
-        margin-left: -5%;
-      }
+    .mb-80 {
+      margin-bottom: 40px;
+    }
 
-      .ml7 {
-        margin-bottom: 0 !important;
-        margin-left: -5%;
-      }
+    .w-95 {
+      width: 95%;
+    }
 
-      .w-50 {
-        width: 60%;
-      }
+    .w-80 {
+      width: 85%;
+    }
 
-      .w-70 {
-        width: 75%;
-      }
 
-      .mb-400 {
-        margin-bottom: 200px;
-      }
+    .w-50 {
+      width: 60%;
+    }
 
-      .mb-300 {
-        margin-bottom: 150px;
-      }
+    .w-70 {
+      width: 75%;
+    }
+
+    .mb-400 {
+      margin-bottom: 213px;
+    }
+
+    .mb-401 {
+      margin-bottom: 190px;
+    }
+
+    .mb-300 {
+      margin-bottom: 150px;
+    }
+  }
+}
+
+@media (min-width: 1901px) and (max-width: 2700px) {
+  .card-content {
+
+    .title-comp {
+      padding: 385px 0 46px;
+    }
+
+    .service {
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 40px;
+      letter-spacing: 0.5px;
+      text-align: center;
+      padding: 25px 55px;
+      width: 241px;
+      border-radius: 110px;
+    }
+
+    .text-gray, .text-black {
+      font-weight: 400;
+      font-size: 25px;
+      line-height: 30px;
+    }
+
+    .mb-50 {
+      margin-bottom: 32px;
+    }
+
+    .mb-80 {
+      margin-bottom: 55px;
+    }
+
+    .w-95 {
+      width: 95%;
+    }
+
+    .w-80 {
+      width: 85%;
+    }
+
+
+    .w-50 {
+      width: 60%;
+    }
+
+    .w-70 {
+      width: 75%;
+    }
+
+    .mb-400 {
+      margin-bottom: 213px;
+    }
+
+    .mb-401 {
+      margin-bottom: 190px;
+    }
+
+    .mb-300 {
+      margin-bottom: 150px;
+    }
+  }
+}
+
+@media (min-width: 2701px) and (max-width: 3000px) {
+  .card-content {
+
+    .title-comp {
+      padding: 559px 0 70px;
+    }
+
+    .service {
+      font-weight: 400;
+      font-size: 44px;
+      line-height: 54px;
+      letter-spacing: 0.5px;
+      text-align: center;
+      padding: 38px 80px;
+      width: 352px;
+      border-radius: 160px;
+    }
+
+    .text-gray, .text-black {
+      font-weight: 400;
+      font-size: 34px;
+      line-height: 45px;
+    }
+
+    .mb-80 {
+      margin-bottom: 55px;
+    }
+
+    .w-95 {
+      width: 95%;
+    }
+
+    .w-80 {
+      width: 85%;
+    }
+
+
+    .w-50 {
+      width: 60%;
+    }
+
+    .w-70 {
+      width: 75%;
+    }
+
+    .mb-400 {
+      margin-bottom: 213px;
+    }
+
+    .mb-401 {
+      margin-bottom: 190px;
+    }
+
+    .mb-300 {
+      margin-bottom: 150px;
     }
   }
 }
