--- a/frontend/src/app/pages/components/main-screen/main-screen.component.html
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.html
@@ -1,14 +1,14 @@
 <p-carousel
-  [value]="settings.settings?.home_slides || []"
+  [value]="items"
   [numVisible]="1"
   [numScroll]="1"
   [circular]="true"
   [showIndicators]="true"
   [showNavigators]="false"
   (onPage)="change($event)"
-  [page]="page"
+  [page]="(page|async) || 0"
 >
-  <ng-template let-item pTemplate="item">
+  <ng-template let-item let-index pTemplate="item">
     <div
       [class]="'home-slide '"
       (mouseover)="hovered = true"
@@ -18,15 +18,19 @@
         class="video-background w-100 h-100"
         [style.background-image]="'url('+item.image_url+')'"
       >
-        <iframe
-          *ngIf="item.video"
-          class="mb-60 w-94"
-          width="100%"
-          height="100%"
-          [src]="url(item.video, hovered && item.index == page) | safe"
-          frameBorder="0"
-          allow="autoplay; clipboard-write; encrypted-media;"
-        ></iframe>
+        <video *ngIf="item.video_url" [autoplay]="(page|async) === index ? 'true' : 'false'" muted loop
+               oncanplay="this.play()" onloadedmetadata="this.muted = true">
+          <source [src]="item.video_url" type="video/mp4">
+        </video>
+        <!--        <iframe-->
+        <!--          *ngIf="item.video"-->
+        <!--          class="mb-60 w-94"-->
+        <!--          width="100%"-->
+        <!--          height="100%"-->
+        <!--          [src]="url(item.video, hovered && item.index == page) | safe"-->
+        <!--          frameBorder="0"-->
+        <!--          allow="autoplay; clipboard-write; encrypted-media;"-->
+        <!--        ></iframe>-->
       </div>
       <div [class]="'content w-100 d-flex a-i-center j-c-center ' + (item.apply_blur ? 'blur' : '')">
         <div class="w-100 h-100 d-flex a-i-center j-c-center">
