--- a/frontend/src/app/pages/components/customers/customers.component.html
+++ b/frontend/src/app/pages/components/customers/customers.component.html
@@ -3,9 +3,12 @@
     <h2 class="mb-60">Клиенты</h2>
     <div class="direction-column d-flex j-c-space-between border">
       <div class="d-flex w-80 flex-wrap direction-row gap-10 ml-40" style="margin-bottom: 60px">
-        <a href="#" class="company"
-           *ngFor="let client of settings.settings?.clients; index as i"
-           (mouseenter)="showDescription(i)">{{client.name}}</a>
+        <a
+          href="#" class="company"
+          *ngFor="let client of settings.settings?.clients; index as i"
+          (mouseenter)="showDescription(i)"
+          (click)="$event.preventDefault();"
+        >{{client.name}}</a>
       </div>
       <div class="description d-flex direction-column gap-60"
            *ngFor="let client of settings.settings?.clients; index as i"
