--- a/frontend/src/app/pages/components/main-screen/main-screen.component.scss
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.scss
@@ -18,6 +18,10 @@
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
+
+    &.blur {
+      filter: blur(20px);
+    }
   }
 
   .content {
@@ -30,9 +34,16 @@
       color: var(--white);
     }
 
-    &.blur {
-      backdrop-filter: blur(40px);
-    }
+    // .blur {
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 100%;
+    //   top: 0;
+    //   left: 0;
+    //   // background: #000;
+    //   // opacity: 0.5;
+    //   background-image: url('/images/blur.png');
+    // }
 
     .logo {
       width: 50%;
