--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -71,7 +71,7 @@ markdown {
 
   em {
     font-family: 'WilliamTextLCItalic', serif;
-    font-style: italic;
+    font-style: normal;
 
     strong {
       font-family: 'ABCFavoritCYRItalic', serif;
@@ -272,23 +272,22 @@ markdown, .d-block {
   background-color: var(--white);
 }
 
-.text-black {
-  font-size: 34px;
+.text-gray, .text-gray * {
+  font-size: 25px;
   font-weight: 400;
-  line-height: 45px;
-  color: var(--black);
-}
-
-.text-gray {
-  font-size: 34px;
-  font-weight: 400;
-  line-height: 45px;
+  line-height: 30px;
   color: var(--text-gray);
 
   span {
     font-family: 'WilliamTextLCItalic';
-    font-style: italic;
   }
+}
+
+.text-black, .text-black * {
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 30px;
+  color: var(--black);
 }
 
 .text-title {
@@ -299,7 +298,7 @@ markdown, .d-block {
 
   span {
     font-family: 'WilliamTextLCItalic';
-    font-style: italic;
+    font-style: normal;
     font-weight: 400;
   }
 }
@@ -364,12 +363,12 @@ markdown.text-title, markdown.d-inline {
     letter-spacing: -0.5px;
   }
 
-  .text-black {
+  .text-black, .text-black * {
     font-size: 20px;
     line-height: 25px;
   }
 
-  .text-gray {
+  .text-gray, .text-gray * {
     font-size: 12px;
     line-height: 15px;
   }
@@ -408,12 +407,12 @@ markdown.text-title, markdown.d-inline {
     letter-spacing: -1px;
   }
 
-  .text-black {
+  .text-black, .text-black * {
     font-size: 17px;
     line-height: 22px;
   }
 
-  .text-gray {
+  .text-gray, .text-gray * {
     font-size: 12px;
     line-height: 17px;
   }
@@ -475,7 +474,7 @@ markdown.text-title, markdown.d-inline {
     margin-bottom: 38px;
   }
 
-  .text-black, .text-gray {
+  .text-black, .text-gray, .text-black *, .text-gray * {
     font-weight: 400;
     font-size: 17px;
     line-height: 22.5px;
@@ -514,11 +513,11 @@ markdown.text-title, markdown.d-inline {
 
     span {
       font-family: 'WilliamTextLCItalic';
-      font-style: italic;
+      font-style: normal;
     }
   }
 
-  .text-black, .text-gray {
+  .text-black, .text-gray, .text-black *, .text-gray {
     font-weight: 400;
     font-size: 25px;
     line-height: 30px;
@@ -555,11 +554,11 @@ markdown.text-title, markdown.d-inline {
 
     span {
       font-family: 'WilliamTextLCItalic';
-      font-style: italic;
+      font-style: normal;
     }
   }
 
-  .text-black, .text-gray {
+  .text-black, .text-gray, .text-black *, .text-gray * {
     font-weight: 400;
     font-size: 34px;
     line-height: 45px;
