--- a/frontend/src/app/pages/components/customers/customers.component.html
+++ b/frontend/src/app/pages/components/customers/customers.component.html
@@ -1,6 +1,6 @@
 <div class="w-100 background-white">
   <div class="container d-flex direction-column padding">
-    <h2 class="mb-60">Клиенты</h2>
+    <h2 class="mb-60 h22">Клиенты</h2>
     <div class="direction-column d-flex j-c-space-between border">
       <div class="d-flex w-80 flex-wrap direction-row gap-10 ml-40" style="margin-bottom: 60px">
         <a
