--- a/frontend/src/app/pages/components/services/services.component.html
+++ b/frontend/src/app/pages/components/services/services.component.html
@@ -1,6 +1,6 @@
 <div class="w-100 background-white">
   <div class="container d-flex j-c-start direction-column">
-    <h2>Услуги</h2>
+    <h2 class="mbot">Услуги</h2>
     <div class="d-flex w-80 direction-row flex-wrap">
       <div class="service-item d-flex j-c-space-between direction-column item"
            *ngFor="let item of settings.settings?.services">
