--- a/frontend/src/app/components/slider/slider.component.html
+++ b/frontend/src/app/components/slider/slider.component.html
@@ -13,7 +13,7 @@
     <div class="d-flex direction-row gap-10 services">
       <div class="service" *ngFor="let tag of project.tags">{{tag}}</div>
     </div>
-    <div class="text-gray w-70">
+    <div class="text-gray w-70 mobik">
       <a [routerLink]="'/projects/'+(project.seo_alias || project.id)" class="text-black">{{project.name}}&nbsp;</a>
       <a [routerLink]="'/projects/'+(project.seo_alias || project.id)" class="text-gray">
         <markdown class="d-inline" [data]="project.short_description"></markdown>
