--- a/frontend/src/app/pages/components/customers/customers.component.scss
+++ b/frontend/src/app/pages/components/customers/customers.component.scss
@@ -58,19 +58,28 @@ img {
 @media (max-width: 999px) {
 
   .padding {
-    padding: 160px 0 170px;
+    padding: 166px 0 172px;
+  }
+
+  .h22 {
+    padding-bottom: 30px;
+    padding-left: 17px;
+    border-left: 1px solid black;
+    display: inline-block;
   }
 
   .company {
+    font-weight: 400;
     font-size: 15px;
-    line-height: 16px;
+    line-height: 16.49px;
     letter-spacing: 0.5px;
+    text-align: center;
     padding: 15px 24px;
-    border-radius: 48px;
+    border-radius: 49px;
   }
 
   .mb-60 {
-    margin-bottom: 20px;
+    margin-bottom: 0;
   }
 
   .gap-10 {
@@ -78,7 +87,7 @@ img {
   }
 
   .ml-40 {
-    margin-left: 20px;
+    margin-left: 17px;
   }
 
   .h-760 {
@@ -90,16 +99,19 @@ img {
   }
 
   img {
-    max-width: 170px;
+    max-width: 168px;
   }
 
   .gap-60 {
-    gap: 20px;
+    gap: 23.5px;
   }
 
   .text-gray, .text-black {
+    font-weight: 400;
     font-size: 15px;
     line-height: 20px;
+    letter-spacing: 0;
+
   }
 }
 
