--- a/frontend/src/app/pages/components/form/form.component.html
+++ b/frontend/src/app/pages/components/form/form.component.html
@@ -50,12 +50,12 @@
     <div class="d-flex direction-column gap-30" *ngIf="isMobile">
       <img src="images/logo-black.svg" alt="logo" class="logo"/>
       <div class="text-black d-flex direction-column">
-        <span>+7 (843) 251-99-99</span>
-        <span>brainstore.com</span>
+        <span class="m-b">+7 (843) 251-99-99</span>
+        <span class="m-b">brainstore.com</span>
       </div>
       <div class="text-black d-flex direction-column">
-        <span>Telegram</span>
-        <span>VK</span>
+        <span class="m-b">Telegram</span>
+        <span class="m-b">VK</span>
       </div>
       <div class="d-flex direction-column">
         <span class="text-black">© 2024 Brainstore</span>
