--- a/frontend/src/app/pages/components/services/services.component.scss
+++ b/frontend/src/app/pages/components/services/services.component.scss
@@ -53,24 +53,25 @@
 
 @media (max-width: 1250px) {
 
-  .flex-wrap {
-    flex-direction: column;
-    flex-wrap: nowrap;
+  .mbot {
+    margin-bottom: 25px;
   }
 
+  //.flex-wrap {
+  //  flex-direction: column;
+  //  flex-wrap: nowrap;
+  //}
+
   .item {
+    width: 100%;
     height: 90px;
     border-left: none;
     border-top: 1px solid var(--black);
-    padding: 0;
+    padding: 16px 0 0 0;
   }
 
   .w-25, .w-80 {
     width: 100%;
-  }
-
-  .j-c-space-between {
-    justify-content: center;
   }
 
   .text-black {
@@ -114,6 +115,7 @@
 
 @media (min-width: 1351px) and (max-width: 1900px) {
 
+
   .item {
     margin-bottom: 30px;
     height: 207.5px;
@@ -125,6 +127,8 @@
 }
 
 @media (min-width: 1901px) and (max-width: 2700px) {
+
+
   .item {
     margin-bottom: 40px;
     height: 285px;
@@ -135,6 +139,7 @@
 }
 
 @media (min-width: 2701px) and (max-width: 3000px) {
+
   .item {
     margin-bottom: 60px;
     height: 415px;
