--- a/frontend/src/app/pages/components/statistics/statistics.component.scss
+++ b/frontend/src/app/pages/components/statistics/statistics.component.scss
@@ -33,7 +33,8 @@
         gap: 20px;
 
         .section {
-          padding: 50px 0 0 20px;
+          height: 180px;
+          padding: 52px 0 13px 20px;
 
           .mb-50 {
             margin-bottom: 12px;
