--- a/frontend/src/app/pages/components/works/works.component.scss
+++ b/frontend/src/app/pages/components/works/works.component.scss
@@ -1,6 +1,14 @@
-@media (min-width: 370px) and (max-width: 999px) {
+@media (max-width: 999px) {
   .mb-60 {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    margin-top: 32px;
+  }
+
+  .w-auto {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 17px;
+    letter-spacing: 0;
   }
 }
 
@@ -11,7 +19,6 @@
 
   h2 {
     margin-bottom: 0;
-    margin-top: 0;
   }
 }
 
@@ -22,7 +29,6 @@
 
   h2 {
     margin-bottom: 0;
-    margin-top: 0;
   }
 }
 
@@ -33,13 +39,11 @@
 
   h2 {
     margin-bottom: 0;
-    margin-top: 0;
   }
 }
 
 @media (min-width: 2701px) and (max-width: 3000px) {
   h2 {
     margin-bottom: 0;
-    margin-top: 0;
   }
 }
