--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -66,8 +66,7 @@ body {
 
 markdown {
   p {
-    color: var(--text-gray);
-    margin-block-end: 0 !important;
+    margin: 0 !important;
   }
 
   em {
