--- a/frontend/src/app/pages/team/team.component.html
+++ b/frontend/src/app/pages/team/team.component.html
@@ -1,11 +1,10 @@
-
 <div class="team-content w-100">
   <div class="d-flex direction-column a-i-start w-100 container">
-    <div class="text-title w-80 mb-400">Команда героев на пути своих приключений справится с любой миссией, <span>когда их
+    <div class="text-title mb-400 padd">Команда героев на пути своих приключений справится с любой миссией, <span>когда их
         объединяет товарищество и зов мечты.</span> Присылай портфолио на hello{{'@'}}brainstore.agency и начни свой
       квест!
     </div>
-    <div class="w-50 text-black mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
+    <div class="w-50 texx mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
       hello{{'@'}}brainstore.agency
     </div>
     <img src="images/team.png" alt="picture" class="mb-60"/>
