--- a/frontend/src/app/components/project-content/project-content.component.scss
+++ b/frontend/src/app/components/project-content/project-content.component.scss
@@ -7,8 +7,14 @@
     padding-right: 30px;
   }
 
+  .swipe-horizontal {
+    max-width: 100%;
+    overflow-x: auto;
+  }
+
   .textttt {
     color: var(--text-gray);
+    margin-bottom: 40px;
   }
 
   .mb-70 {
@@ -53,6 +59,12 @@
 
     .pic {
       width: 100vw;
+    }
+
+    .mob-full {
+      width: 100vw !important;
+      max-width: 100vw;
+      margin-left: calc(50% - 50vw);
     }
 
     .height-200 {
