--- a/frontend/src/app/pages/components/form/form.component.html
+++ b/frontend/src/app/pages/components/form/form.component.html
@@ -37,7 +37,7 @@
       <div class="d-flex direction-column gap-15">
         <div *ngIf="!success" class="form-textarea d-flex direction-column gap-15">
           <label class="text-black">Сообщение</label>
-          <textarea name="message" required placeholder="Здравствуйте, я только спросить..."></textarea>
+          <textarea name="message" required placeholder="Здравствуйте, агентство brainstore"></textarea>
         </div>
         <div *ngIf="!success" class="d-flex direction-row gap-15 a-i-start">
           <img src="images/dot.svg" alt="icon" class="dot"/>
