--- a/frontend/src/app/pages/components/form/form.component.scss
+++ b/frontend/src/app/pages/components/form/form.component.scss
@@ -65,6 +65,7 @@ textarea {
   font-family: 'WilliamTextLC', serif;
 
   &::placeholder {
+    font-family: 'WilliamTextLC', serif;
     font-size: 24px;
     font-weight: 400;
     color: var(--black);
