--- a/frontend/src/app/pages/components/main-screen/main-screen.component.html
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.html
@@ -2,7 +2,7 @@
   [value]="items"
   [numVisible]="1"
   [numScroll]="1"
-  [circular]="true"
+  [circular]="false"
   [showIndicators]="true"
   [showNavigators]="false"
   (onPage)="change($event)"
