--- a/frontend/src/app/pages/components/main-screen/main-screen.component.scss
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.scss
@@ -1,23 +1,22 @@
 .home-slide {
 
   video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-
+    //position: absolute;
+    //top: 0;
+    //left: 0;
+    width: 100%;
   }
 
   .video-background {
+    background-color: #00000090;
     position: relative;
     width: 100%;
     height: 100vh;
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
 
     &.blur {
       filter: blur(20px);
