--- a/frontend/src/app/components/slider/slider.component.scss
+++ b/frontend/src/app/components/slider/slider.component.scss
@@ -51,10 +51,10 @@
   .mobik {
     margin-left: 8px;
   }
-  
+
   .projects-slider {
-    width: 102% !important;
-    margin-left: -8px;
+    //width: 102% !important;
+    //margin-left: -8px;
 
     .w-70 {
       width: 100%;
