--- a/frontend/src/app/pages/components/main-screen/main-screen.component.scss
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.scss
@@ -9,6 +9,7 @@
   display: flex;
   height: 100%;
   transition: transform 0.5s ease;
+  height: 100vh;
 }
 
 .slidee {
@@ -92,7 +93,7 @@
 
 @media (max-width: 999px) {
 
-  .home-slide {
+  .slider-wrapperr {
     height: 86vh;
 
     .video-background {
