--- a/frontend/src/app/pages/components/main-screen/main-screen.component.scss
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.scss
@@ -43,7 +43,8 @@
 .home-slide {
 
   video {
-    width: 100%;
+    height: 100%;
+    min-width: 100%;
   }
 
   .video-background {
@@ -56,6 +57,7 @@
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
+    justify-content: center;
     touch-action: pan-y;
 
     &.blur {
